--- a/web/index.html
+++ b/web/index.html
@@ -90,13 +90,13 @@
     <link rel="icon" sizes="192x192" href="favicon-192.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="flutter_application_2" />
+    <meta name="apple-mobile-web-app-title" content="chess_clock" />
     <link rel="apple-touch-icon" href="icons/Icon-192.png" /> -->
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <title>flutter_application_2</title>
+    <title>chess_clock</title>
     <link rel="manifest" href="manifest.json" />
 
     <script>
